@@ -1,10 +1,10 @@
 package com.comet.opik.api.resources.utils.resources;
 
 import com.comet.opik.api.BatchDelete;
+import com.comet.opik.api.DeleteThreadFeedbackScores;
 import com.comet.opik.api.DeleteTraceThreads;
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Project;
 import com.comet.opik.api.ProjectStats;
 import com.comet.opik.api.Trace;
@@ -12,8 +12,11 @@ import com.comet.opik.api.TraceBatch;
 import com.comet.opik.api.TraceSearchStreamRequest;
 import com.comet.opik.api.TraceThread;
 import com.comet.opik.api.TraceThreadIdentifier;
+import com.comet.opik.api.TraceThreadSearchStreamRequest;
+import com.comet.opik.api.TraceThreadUpdate;
 import com.comet.opik.api.TraceUpdate;
 import com.comet.opik.api.filter.TraceFilter;
+import com.comet.opik.api.filter.TraceThreadFilter;
 import com.comet.opik.api.resources.utils.TestUtils;
 import com.comet.opik.api.sorting.SortingField;
 import com.comet.opik.utils.JsonUtils;
@@ -35,9 +38,16 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatchThread;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.api.TraceThread.TraceThreadPage;
 import static com.comet.opik.api.resources.utils.TestUtils.toURLEncodedQueryParam;
 import static com.comet.opik.infrastructure.auth.RequestContext.WORKSPACE_HEADER;
@@ -82,10 +92,47 @@ public class TraceResourceClient extends BaseCommentResourceClient {
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
-                .put(Entity.json(new FeedbackScoreBatch(score)))) {
+                .put(Entity.json(FeedbackScoreBatch.builder().scores(score).build()))) {
 
             assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
         }
+    }
+
+    public Response callFeedbackScores(List<FeedbackScoreBatchItem> score, String apiKey, String workspaceName) {
+        return client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("feedback-scores")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .put(Entity.json(FeedbackScoreBatch.builder().scores(score).build()));
+    }
+
+    public void threadFeedbackScores(List<FeedbackScoreBatchItemThread> score, String apiKey, String workspaceName) {
+        try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("feedback-scores")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .put(Entity.json(FeedbackScoreBatchThread.builder()
+                        .scores(score)
+                        .build()))) {
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
+    }
+
+    public Response callThreadFeedbackScores(List<FeedbackScoreBatchItemThread> score, String apiKey,
+            String workspaceName) {
+        return client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("feedback-scores")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .put(Entity.json(FeedbackScoreBatchThread.builder()
+                        .scores(score)
+                        .build()));
     }
 
     public void feedbackScore(UUID entityId, FeedbackScore score, String workspaceName, String apiKey) {
@@ -192,7 +239,7 @@ public class TraceResourceClient extends BaseCommentResourceClient {
                                     .projectName(project.name())
                                     .id(trace.id())
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     feedbackScores(scores, apiKey, workspaceName);
 
@@ -230,13 +277,72 @@ public class TraceResourceClient extends BaseCommentResourceClient {
         }
     }
 
-    public TraceThreadPage getTraceThreads(UUID projectId, String apiKey, String workspaceName,
-            List<SortingField> sortingFields) {
+    public void deleteThreadFeedbackScores(String projectName, String threadId, Set<String> scoreNames, String apiKey,
+            String workspaceName) {
         try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("threads")
-                .queryParam("project_id", projectId)
-                .queryParam("sorting", URLEncoder.encode(JsonUtils.writeValueAsString(sortingFields),
-                        StandardCharsets.UTF_8))
+                .path("feedback-scores")
+                .path("delete")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .post(Entity.json(DeleteThreadFeedbackScores.builder()
+                        .projectName(projectName)
+                        .threadId(threadId)
+                        .names(scoreNames)
+                        .build()))) {
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
+    }
+
+    public Response callDeleteThreadFeedbackScores(String projectName, String threadId, Set<String> scoreNames,
+            String apiKey,
+            String workspaceName) {
+        return client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("feedback-scores")
+                .path("delete")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .post(Entity.json(DeleteThreadFeedbackScores.builder()
+                        .projectName(projectName)
+                        .threadId(threadId)
+                        .names(scoreNames)
+                        .build()));
+    }
+
+    public TraceThreadPage getTraceThreads(UUID projectId, String projectName, String apiKey, String workspaceName,
+            List<TraceThreadFilter> filters, List<SortingField> sortingFields, Map<String, String> queryParams) {
+
+        WebTarget target = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads");
+
+        target = Optional.ofNullable(queryParams)
+                .orElseGet(Map::of)
+                .entrySet()
+                .stream()
+                .reduce(target, (acc, entry) -> acc.queryParam(entry.getKey(), entry.getValue()), (a, b) -> b);
+
+        if (projectId != null) {
+            target = target.queryParam("project_id", projectId);
+        }
+
+        if (projectName != null) {
+            target = target.queryParam("project_name", projectName);
+        }
+
+        if (CollectionUtils.isNotEmpty(filters)) {
+            target = target.queryParam("filters", toURLEncodedQueryParam(filters));
+        }
+
+        if (CollectionUtils.isNotEmpty(sortingFields)) {
+            target = target.queryParam("sorting",
+                    URLEncoder.encode(JsonUtils.writeValueAsString(sortingFields), StandardCharsets.UTF_8));
+        }
+
+        try (var response = target
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, apiKey)
                 .header(WORKSPACE_HEADER, workspaceName)
@@ -248,7 +354,20 @@ public class TraceResourceClient extends BaseCommentResourceClient {
         }
     }
 
+    public Response getTraceThreads(String projectName, String apiKey, String workspaceName,
+            List<TraceThreadFilter> filters) {
+        return client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .queryParam("project_name", projectName)
+                .queryParam("filters", toURLEncodedQueryParam(filters))
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .get();
+    }
+
     public TraceThread getTraceThread(String threadId, UUID projectId, String apiKey, String workspaceName) {
+
         try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
                 .path("threads")
                 .path("retrieve")
@@ -376,5 +495,109 @@ public class TraceResourceClient extends BaseCommentResourceClient {
         assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
 
         return actualResponse.readEntity(Trace.TracePage.class);
+    }
+
+    public void openTraceThread(String threadId, UUID projectId, String projectName, String apiKey,
+            String workspaceName) {
+        try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("open")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .put(Entity.json(TraceThreadIdentifier.builder().projectId(projectId).projectName(projectName)
+                        .threadId(threadId).build()))) {
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
+    }
+
+    public void closeTraceThread(String threadId, UUID projectId, String projectName, String apiKey,
+            String workspaceName) {
+        try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("close")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .put(Entity.json(TraceThreadIdentifier.builder().projectId(projectId).projectName(projectName)
+                        .threadId(threadId).build()))) {
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_NO_CONTENT);
+        }
+    }
+
+    public List<TraceThread> searchTraceThreadsStream(String projectName, UUID projectId, String apiKey,
+            String workspaceName, List<TraceThreadFilter> filters) {
+        try (var actualResponse = callSearchTraceThreadStream(projectName, projectId, apiKey, workspaceName, filters)) {
+
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
+
+            return getStreamedTraceThreads(actualResponse);
+        }
+    }
+
+    public Response callSearchTraceThreadStream(String projectName, UUID projectId, String apiKey, String workspaceName,
+            List<TraceThreadFilter> filters) {
+        return client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("search")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .post(Entity.json(TraceThreadSearchStreamRequest.builder()
+                        .filters(filters)
+                        .projectName(projectName)
+                        .projectId(projectId)
+                        .build()));
+    }
+
+    private List<TraceThread> getStreamedTraceThreads(Response response) {
+        var items = new ArrayList<TraceThread>();
+        try (var inputStream = response.readEntity(CHUNKED_INPUT_STRING_GENERIC_TYPE)) {
+            String stringItem;
+            while ((stringItem = inputStream.read()) != null) {
+                items.add(JsonUtils.readValue(stringItem, new TypeReference<>() {
+                }));
+            }
+        }
+        return items;
+    }
+
+    public FeedbackScoreNames getTraceThreadsFeedbackScoreNames(UUID projectId, String apiKey, String workspaceName) {
+
+        WebTarget webTarget = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path("feedback-scores")
+                .path("names");
+
+        webTarget = webTarget.queryParam("project_id", projectId);
+
+        try (var actualResponse = webTarget
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .get()) {
+
+            // then
+            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
+            return actualResponse.readEntity(FeedbackScoreNames.class);
+        }
+    }
+
+    public void updateThread(TraceThreadUpdate threadUpdate, UUID threadModelId, String apiKey, String workspaceName,
+            int expectedStatus) {
+
+        try (var response = client.target(RESOURCE_PATH.formatted(baseURI))
+                .path("threads")
+                .path(threadModelId.toString())
+                .request()
+                .accept(MediaType.APPLICATION_JSON_TYPE)
+                .header(HttpHeaders.AUTHORIZATION, apiKey)
+                .header(WORKSPACE_HEADER, workspaceName)
+                .method(HttpMethod.PATCH, Entity.json(threadUpdate))) {
+
+            assertThat(response.getStatus()).isEqualTo(expectedStatus);
+        }
     }
 }
